--- a/astro-version/package.json
+++ b/astro-version/package.json
@@ -28,5 +28,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "astro-mcp": "^0.4.1"
   }
 }
