--- a/astro-version/package.json
+++ b/astro-version/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "@astrojs/node": "^9.4.0",
     "@astrojs/react": "^4.3.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.9",
