--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
-  "name": "siligong-gamedev-site",
-  "version": "0.0.1",
+  "name": "astro-version",
   "type": "module",
-  "description": "Siligong Gamedev Community Website - React to Astro Migration",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "cd astro-version && bun run dev",
-    "start": "cd astro-version && bun run start",
-    "build": "cd astro-version && bun run build",
-    "preview": "cd astro-version && bun run preview",
-    "clean": "cd astro-version && bun run clean",
-    "type-check": "cd astro-version && bun run type-check",
-    "lint": "cd astro-version && bun run lint",
-    "astro": "cd astro-version && bun run astro"
+    "dev": "bun astro dev",
+    "start": "bun astro dev",
+    "build": "bun astro build",
+    "preview": "bun astro preview",
+    "clean": "rm -rf dist",
+    "type-check": "bunx tsc --noEmit",
+    "lint": "bunx eslint src --ext .ts,.tsx,.astro",
+    "astro": "astro"
   },
-  "keywords": [
-    "astro",
-    "react",
-    "tailwind",
-    "gamedev",
-    "community",
-    "wollongong"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "."
+  "dependencies": {
+    "@astrojs/node": "^9.4.0",
+    "@astrojs/react": "^4.3.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "astro": "^5.12.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.539.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7"
   },
-  "license": "MIT"
+  "devDependencies": {
+    "astro-mcp": "^0.4.1"
+  }
 }
