--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "astro": "^5.12.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
